5 improving properties values, it was done on the #5 issue but not big deal/impact.

--- a/src/main/resources/velocity/velocity-reset-password_pt_br.vm
+++ b/src/main/resources/velocity/velocity-reset-password_pt_br.vm
@@ -34,7 +34,7 @@
 		</div>
 		
 		<div class="clockInClockOutDIV">
-			Se você não deseja redefinir sua senha, desconsidere esta mensagem e sua senha não terá nenhuma modificação.
+			Se você não deseja redefinir sua senha, apenas desconsidere esta mensagem e sua senha não terá nenhuma modificação.
 		</div>
 		
 		<div class="clockInClockOutDIV">
