--- a/src/main/resources/velocity/velocity-reset-password_en.vm
+++ b/src/main/resources/velocity/velocity-reset-password_en.vm
@@ -30,7 +30,15 @@
 		</div>
 		
 		<div class="clockInClockOutDIV">
-			<a href="${linkSite}/reset/${emailContent.encodedEmailAddress}?q=${emailContent.hash}" target="_blank">Confirm reset password.</a>
+			<a href="${linkSite}/reset/${emailContent.encodedEmailAddress}?q=${emailContent.encodedHash}" target="_blank">Confirm reset password.</a>
+		</div>
+		
+		<div class="clockInClockOutDIV">
+			In case you want to go on reseting your password through another way, as through the mobile app, the code to be provided is the following;
+		</div>
+		
+		<div class="clockInClockOutDIV">
+			${emailContent.hash}
 		</div>
 		
 		<div class="clockInClockOutDIV">
